--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -8,7 +8,7 @@
     z-index: 2;
     height: 60px;
     padding: 10px 15px ; 
-    margin: 0;
+    margin: 0 auto;
     
    
   @media screen and (min-width:768px){
@@ -117,7 +117,7 @@
       width: calc((100% - 6 * 25px) / 3);
       margin: 25px;
       text-align: center;
-      width: 100%;
+      // width: 100%;
     }
 
     @media screen and (min-width:1200px){ 
@@ -125,7 +125,7 @@
       width: calc((100% - 6 * 26px) / 3);
       margin: 26px;
       text-align: center;
-      width: 100%;
+      // width: 100%;
     }
   }
 
@@ -154,7 +154,7 @@
     }
 
   @media screen and (min-width:1200px){
-    display: flex;  
+    // display: flex;  
   }
 }
 
@@ -252,8 +252,8 @@ line-height: calc(28 / 24);
     }
   }
   @media screen and (min-width: 768px){
-    background-color: transparent;
-  display: flex;
+        background-color: transparent;
+  display:flex;
   align-items:center;
   padding: 0;
       }
@@ -276,7 +276,8 @@ line-height: calc(28 / 24);
   .contacts {
     
     @media screen and (min-width: 1200px){
-      display: flex; 
+      display:flex;
+      flex-direction:row;
         }
 }
 
