--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,6 +1,7 @@
 .hero {
     margin: 0 auto;
     text-align: center;
+    align-items: center;
     padding: 100px 0;
     max-width: 1600px;
     height: 400px;
