--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -23,15 +23,15 @@ html{
     font-family: "Roboto", sans-serif;
     font-size: 14px;
     color: var(--main-color);
-    padding-top: 60px;
+    
 
     @media screen and (max-width:767px){
-    padding-top: 60px;
+    
 
     }
     
   @media screen and (min-width:767px){
-    padding-top: 80px;
+    
   
   }
   }
@@ -47,24 +47,22 @@ html{
   
   .container {
      // mobile screen 0px & >
-     min-width: 320px;
-   
-    
-    margin: 0 auto;
-    padding: 0 15px;
+     width: 100%;       
+     padding: 0 15px;
+     margin: 0 auto;
 
+     // mobile screen 480px & >
+    @media screen and (min-width:480px){
+      width: 480px;
+    }
   // tablet screen 768px & >
-    @media screen and (max-width:767px){
-      max-width: 480px;
+    @media screen and (min-width:768px){
+      width: 768px;
     }
 
-    @media screen and (min-width:768px){
-      width: 768px;  
-    }
-  
     // desctop screen 1200px & >
     @media screen and (min-width:1200px){
-      width: 1200px;
+    width: 1200px;
   }
 }
 
