--- a/sass/component/_modal-styles.scss
+++ b/sass/component/_modal-styles.scss
@@ -1,15 +1,18 @@
 .modal-backdrop {
     position: fixed;
     top: 0;
+    right: 0;
     left: 0;
+    bottom: 0;
     transition: opacity 500ms, visibility 2500ms;
-    width: 100vw;
+    // min-width: 320px;
     height: 100vh;
     background: rgba(0, 0, 0, 0.2);
     overflow-y: scroll;
   }
   
   .modal {
+    width: 100vw;
     position: absolute;
     transform: translate(-50%, -50%) rotate(0);
     transition: transform 100ms;
@@ -19,15 +22,20 @@
    
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    max-width: 450px;
-      max-height: 609px;
+  
+    @media screen and (min-width:450px){
+      width: 450px;
+    }
+    @media screen and (min-width:768px){
+      width: 450px; 
+
 
     @media screen and (min-width:1200px){ 
     max-width: 528px;
     max-height: 581px;
-    
-  }
+      }
 }
+  }
   
   .is-hidden {
     visibility: hidden;
@@ -74,6 +82,7 @@
   
   .form__field {
     display: block;
+    justify-content: center;
    
   }
   
@@ -139,7 +148,7 @@
   .textarea {
     padding: 12px 40px;
     resize: none;
-    width: 370px;
+    width: 100%;
     height: 138px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
