--- a/sass/component/_title.scss
+++ b/sass/component/_title.scss
@@ -1,5 +1,7 @@
 .hero__title {
     margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
   
     font-weight: 900;
     font-size: 26px;
