--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,9 +1,12 @@
 .hero {
+
+  @media screen and (max-width:767px) {
     margin: 0 auto;
     text-align: center;
     align-items: center;
+    justify-content: center;
     padding: 100px 0;
-    max-width: 1600px;
+    
     height: 400px;
     background: var(--hero-footer-background);
     background-repeat: no-repeat;
@@ -15,21 +18,27 @@
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), 
                                       rgba(47, 48, 58, 0.4)),
                                       url(../images/hero/1x_m_hero.jpg);
-   @media screen and (min-device-pixel-ratio: 2), (min-resolution: 192dpi),
+   
+ @media screen and (min-device-pixel-ratio: 2), (min-resolution: 192dpi),
   (min-resolution: 2dppx){
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), 
     rgba(47, 48, 58, 0.4)), url(../images/hero/2x_m_hero.jpg);
   }
+}
 
   
   @media screen and (min-width:768px) {
       padding: 118px 0;
-      max-width: 768px;
-    }   
-
+      margin: 0 auto;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+  
+  
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), 
   rgba(47, 48, 58, 0.4)),
   url(../images/hero/1x_t_hero.jpg);
+  }
 
 @media screen and (min-device-pixel-ratio: 2), (min-resolution: 192dpi),
 (min-resolution: 2dppx){
@@ -38,6 +47,7 @@ rgba(47, 48, 58, 0.4)), url(../images/hero/2x_t_hero.jpg);
 }
 
 @media screen and (min-width:1200px) {
+ 
       padding:200px 0;
       max-width: 1600px;
       height: 600px;
