--- a/sass/layout/_subscribe.scss
+++ b/sass/layout/_subscribe.scss
@@ -11,14 +11,17 @@
   @media screen and (min-width:1200px){
     display:flex;
     align-items: center;
+    text-align: center;
+    justify-content: center;
   }
 }
  
 .subscribe__input {
     display: flex;
     margin-bottom: 20px;
-  
-    min-width: 450px;
+ margin-left: auto;
+ margin-right: auto;
+    max-width: 450px;
     height: 50px;
     background-color: var(--hero-footer-background);
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -49,6 +52,11 @@
     line-height: calc(20 / 16);
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
+  }
+
+  @media screen and (min-width:768px){
+    min-width: 450px;
+    margin-bottom: 20px;
   }
 
   @media screen and (min-width:1200px){
