--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -26,7 +26,7 @@
   
   .team__item {
     
-    width: 450px;
+    max-width: 450px;
     text-align: center;
     border-radius: 0px 0px 4px 4px;
     border-top: none;
