--- a/css/main.css
+++ b/css/main.css
@@ -443,7 +443,7 @@ img {
 }
 @media screen and (min-width: 768px) and (min-width: 1200px) {
   .modal {
-    max-width: 528px;
+    width: 528px;
     max-height: 581px;
   }
 }
@@ -674,21 +674,10 @@ img {
 }
 @media screen and (min-width: 768px) {
   .header {
+    padding: 0px 15px;
     height: 80px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
   }
 }
-@media screen and (min-width: 1200px) {
-  .header {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    width: 1600px;
-  }
-}
-
 .header-nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -701,20 +690,10 @@ img {
           align-items: center;
 }
 @media screen and (min-width: 768px) {
-  .header-nav {
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
+  .header__logo {
+    margin-right: 88px;
   }
 }
-@media screen and (min-width: 1200px) {
-  .header-nav {
-    -webkit-box-flex: 0;
-        -ms-flex-positive: 0;
-            flex-grow: 0;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .header__logo {
     margin-right: 93px;
@@ -774,7 +753,7 @@ img {
     margin: -25px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .header-nav__list {
     margin: -26px;
   }
@@ -797,7 +776,6 @@ img {
   .header-nav__item {
     width: calc((100% - 156px) / 3);
     margin: 26px;
-    text-align: center;
   }
 }
 
@@ -831,6 +809,18 @@ img {
     display: inline-block;
   }
 }
+@media screen and (min-width: 1200px) {
+  .header-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
 .header-list__mail {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -907,7 +897,7 @@ img {
     display: none;
   }
 }
-@media screen and (max-width: 767px) and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .contact-icon {
     margin-right: 10px;
     -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -916,6 +906,9 @@ img {
 }
 
 .mobile-menu__container {
+  min-width: 320px;
+  padding: 48px 40px;
+  background-color: var(--white-color);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -926,9 +919,6 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  min-width: 320px;
-  padding: 48px 40px;
-  background-color: var(--white-color);
 }
 @media screen and (max-width: 767px) {
   .mobile-menu__container {
@@ -948,11 +938,6 @@ img {
 @media screen and (min-width: 768px) {
   .mobile-menu__container {
     background-color: transparent;
-    padding: 0;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .mobile-menu__container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -960,6 +945,20 @@ img {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .mobile-menu__container {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
   }
 }
 
@@ -969,30 +968,8 @@ img {
 @media screen and (min-width: 768px) {
   .navigation {
     margin-bottom: 0px;
-    margin-right: 99px;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
   }
 }
-@media screen and (min-width: 1200px) {
-  .navigation {
-    margin-right: 290px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .contacts {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
-}
-
 .social-mobile {
   display: -webkit-box;
   display: -ms-flexbox;
