--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,13 +10,14 @@
     
    
   @media screen and (min-width:768px){
+    padding: 0px 15px ;
     height: 80px;
-    display: flex;
+    
     }
     @media screen and (min-width:1200px){
-   
-    justify-content: center;
-    width: 1600px; 
+      // width: 1200px;
+    // justify-content: center;
+    // max-width: 1600px; 
 }
 }
   
@@ -26,18 +27,24 @@
   align-items: center;
 
   @media screen and (min-width:768px){
-    display: inline-flex;
-    // flex-grow: 0;
+    
+    
     }
 
     @media screen and (min-width:1200px){
-      flex-grow: 0;
+      // justify-content:flex-start;
+      // flex-grow: 1;
+      
+  // align-items: center;
            }
   
   }
  
    .header__logo {
-    
+    @media screen and (min-width:768px){
+      margin-right: 88px;
+     }  
+        
     @media screen and (min-width:1200px){
      margin-right: 93px;
     }  
@@ -99,7 +106,8 @@
     display: flex;
     margin: -25px ;
     }  
-    @media screen and (min-width:768px){ 
+    @media screen and (min-width:1200px){
+      // justify-content: flex-start; 
       margin: -26px ;
       }  
     
@@ -115,15 +123,15 @@
       width: calc((100% - 6 * 25px) / 3);
       margin: 25px;
       text-align: center;
-      // width: 100%;
+      
     }
 
     @media screen and (min-width:1200px){ 
       
       width: calc((100% - 6 * 26px) / 3);
       margin: 26px;
-      text-align: center;
-      // width: 100%;
+      
+      
     }
   }
 
@@ -149,11 +157,13 @@
     flex-direction: column-reverse;
     @media screen and (min-width: 768px){
      display: inline-block;
-    //  margin-left: auto;
+    
     }
 
   @media screen and (min-width:1200px){
-    // display: flex;  
+    display: flex;
+    flex-direction: row;  
+    // margin-left: auto;
   }
 }
 
@@ -230,25 +240,24 @@ line-height: calc(28 / 24);
   .contact-icon{
 
     @media screen and (max-width:767px){
-display: none;
+display: none;}
       @media screen and (min-width:768px){ 
     margin-right: 10px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-  }
+    }
 }
-  }
+  
 
 
   .mobile-menu__container {
-    display: flex;
-    flex-direction: column;
-    
-    justify-content:space-between;
     min-width: 320px;
     
     padding: 48px 40px;
     background-color: var(--white-color);
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between;
+    
     
   @media screen and (max-width: 767px){
     height: 796px;
@@ -265,14 +274,15 @@ display: none;
   }
   @media screen and (min-width: 768px){
   background-color: transparent;
-  
-  // display:flex;
-  // align-items:center;
+  display:flex;
+  flex-direction:row;
+  align-items: center;
   padding: 0;
+  flex-grow: 1;
       }
   @media screen and (min-width:1200px){
-      display:flex;
-      flex-direction:row;
+  flex-grow: 1;
+      
   }
 }
 
@@ -284,21 +294,24 @@ display: none;
   @media screen and (min-width: 768px){
       
      margin-bottom: 0px;
-     margin-right: 99px; 
-     align-items: center; 
+    //  margin-right: 99px; 
+    //  align-items: baseline; 
   }
 
   @media screen and (min-width:1200px){
-    margin-right: 290px;
+    // margin-right: 290px;
     }
   }
 
 
   .contacts {
-   
+
+    @media screen and (min-width: 768px){ 
+      
+    }
     @media screen and (min-width: 1200px){
-      display:flex;
-      flex-direction:row;
+     
+     
         }
 }
 
