--- a/css/main.css
+++ b/css/main.css
@@ -930,6 +930,7 @@ img {
     width: 100%;
     -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+    height: 100vh;
   }
   .mobile-menu__container.is-open {
     display: block;
