--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -269,7 +269,7 @@ display: none;}
     left:0;
     width: 100%;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
-   
+   height: 100vh;
     &.is-open{
       display: block;
     }
