--- a/css/main.css
+++ b/css/main.css
@@ -678,6 +678,7 @@ img {
     height: 80px;
   }
 }
+
 .header-nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -836,8 +837,10 @@ img {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header-list__mail:hover + .header-list__icon--email:hover, .header-list__mail:focus + .header-list__icon--email:focus {
+.header-list__mail:hover, .header-list__mail:focus {
   color: var(--hover-color);
+}
+.header-list__mail:hover .header-list__icon--email, .header-list__mail:focus .header-list__icon--email {
   fill: var(--hover-color);
 }
 @media screen and (min-width: 768px) {
@@ -872,10 +875,6 @@ img {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header-list__tel:hover + .header-contacts__icon--smartphone:hover, .header-list__tel:focus + .header-contacts__icon--smartphone:focus {
-  color: var(--hover-color);
-  fill: var(--hover-color);
-}
 @media screen and (min-width: 768px) {
   .header-list__tel {
     color: var(--second-color);
@@ -890,6 +889,12 @@ img {
     font-size: 14px;
     line-height: 1.1428571429;
   }
+}
+.header-list__tel:hover, .header-list__tel:focus {
+  color: var(--hover-color);
+}
+.header-list__tel:hover .header-contacts__icon--smartphone, .header-list__tel:focus .header-contacts__icon--smartphone {
+  fill: var(--hover-color);
 }
 
 @media screen and (max-width: 767px) {
@@ -971,6 +976,7 @@ img {
     margin-bottom: 0px;
   }
 }
+
 .social-mobile {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1807,7 +1813,7 @@ img {
   margin-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
-  max-width: 450px;
+  min-width: 320px;
   height: 50px;
   background-color: var(--hero-footer-background);
   border: 1px solid rgba(255, 255, 255, 0.3);
