--- a/sass/layout/_subscribe.scss
+++ b/sass/layout/_subscribe.scss
@@ -21,7 +21,7 @@
     margin-bottom: 20px;
  margin-left: auto;
  margin-right: auto;
-    max-width: 450px;
+    min-width: 320px;
     height: 50px;
     background-color: var(--hero-footer-background);
     border: 1px solid rgba(255, 255, 255, 0.3);
