--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -23,7 +23,7 @@ html{
     font-family: "Roboto", sans-serif;
     font-size: 14px;
     color: var(--main-color);
-    overflow: hidden;
+    // overflow: hidden;
     
 
     @media screen and (max-width:767px){
