--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,7 +7,7 @@
     height: 60px;
     padding: 10px 15px ; 
     margin: 0 auto;
-    position: relative;
+    
    
   @media screen and (min-width:768px){
     padding: 0px 15px ;
@@ -23,13 +23,8 @@
   align-items: center;
 
   @media screen and (min-width:768px){
-    
-    
-    }
-
-    @media screen and (min-width:1200px){
-      
-           }
+    justify-content:flex-start;
+     }
   
   }
  
@@ -83,8 +78,7 @@
     color: var(--hover-color);
   }  
 
-    @media screen and (min-width:768px){
-          
+    @media screen and (min-width:768px){     
   padding: 32px 0;
   font-size: 14px;
       line-height: calc(16 / 14);
@@ -205,9 +199,7 @@ line-height: calc(28 / 24);
     
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
- 
-
-  @media screen and (min-width:768px){
+   @media screen and (min-width:768px){
     color: var(--second-color);
     fill: var(--second-color);
     font-size: 12px;
@@ -244,9 +236,8 @@ line-height: calc(28 / 24);
   
 
 
-  .menu__container {
+  .js-menu-container { 
      
-      
   @media screen and (max-width: 767px){
     position: fixed;
     top: 0;
@@ -254,41 +245,37 @@ line-height: calc(28 / 24);
     width: 100vw;
     height: 100vh;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
-   height: 100vh;
    background-color: #ffffff;
     padding: 48px 40px;
         z-index: 3;
-
         transform: translateX(100%);
         transition: transform 250ms ease-in-out;
         
-      
-
-    &.js-open-menu{
+    &.is-open{
       transform:translateX(0);
     }
   }
   @media screen and (min-width: 768px){
   background-color: transparent;
-  display:flex;
-  flex-direction:row;
-  align-items: center;
-  justify-content:space-between; 
   padding: 0;
-  flex-grow: 1;
       }
-  @media screen and (min-width:1200px){
-  flex-grow: 1;
-      
-  }
 }
 
 .mobile-content{
-   display: flex;
+   
+    @media screen and (max-width:767px){
+      display: flex;
     flex-direction: column;
     justify-content:space-between;
     margin-bottom: auto;
     height: 100%;
+    }
+    @media screen and (min-width:768px){
+         height: 100%;
+      margin-botton:0;
+       display:flex;
+  align-items: center;
+    }
 }
 
   .navigation{
@@ -296,26 +283,15 @@ line-height: calc(28 / 24);
        
   @media screen and (min-width: 768px){
      margin-bottom: 0px;
-  }
+     margin-right: 86px;
+     }
 
   @media screen and (min-width:1200px){
-   
+   margin-right: 293px;
     }
   }
 
-
-  .contacts {
-
-    @media screen and (min-width: 768px){ 
-      
-    }
-    @media screen and (min-width: 1200px){
-     
-     
-        }
-}
-
-.social-mobile{
+  .social-mobile{
   display: flex;
   flex-wrap: wrap;
 
