--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -51,10 +51,12 @@ html{
      width: 100%;       
      padding: 0 15px;
      margin: 0 auto;
-
+     @media screen and (min-width:320px){
+      min-width: 320px;
+    }
      // mobile screen 480px & >
     @media screen and (min-width:480px){
-      width: 480px;
+     max-width: 480px;
     }
   // tablet screen 768px & >
     @media screen and (min-width:768px){
