--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -22,7 +22,7 @@
  @media screen and (min-device-pixel-ratio: 2), (min-resolution: 192dpi),
   (min-resolution: 2dppx){
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), 
-    rgba(47, 48, 58, 0.4)), url(../images/hero/2x_m_hero.jpg);
+    rgba(47, 48, 58, 0.4)), url(./images/hero/2x_m_hero.jpg);
   }
 }
 
