--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -57,7 +57,6 @@ margin-bottom: 40px;
    
     @media screen and (min-width:1200px){  
     width: calc((100% - 6 * 15px) / 3);
-    
       }
   }
   
@@ -67,6 +66,7 @@ margin-bottom: 40px;
     line-height: calc(30 / 16);
     letter-spacing: 0.03em;
     color: var(--second-color);
+    
   }
   
   .exsamples__img {
@@ -79,6 +79,9 @@ margin-bottom: 40px;
     border: 1px solid rgba(238, 238, 238, 1);
     border-top: none;
     padding: 20px 0 20px 24px;
+    @media screen and (min-width:1200px){
+      text-align: left;
+    }
   }
   
   .exsamples__click {
