--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -56,7 +56,7 @@ html{
     }
      // mobile screen 480px & >
     @media screen and (min-width:480px){
-     max-width: 480px;
+     width: 480px;
     }
   // tablet screen 768px & >
     @media screen and (min-width:768px){
