--- a/sass/component/_modal-styles.scss
+++ b/sass/component/_modal-styles.scss
@@ -5,14 +5,15 @@
     left: 0;
     bottom: 0;
     transition: opacity 500ms, visibility 2500ms;
-    // min-width: 320px;
+    width: 100vw;
     height: 100vh;
     background: rgba(0, 0, 0, 0.2);
     overflow-y: scroll;
+    z-index:6;
   }
   
   .modal {
-    width: 100vw;
+    
     position: absolute;
     transform: translate(-50%, -50%) rotate(0);
     transition: transform 100ms;
@@ -23,7 +24,7 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
   
-    @media screen and (min-width:450px){
+    @media screen and (min-width:480px){
       width: 450px;
     }
     @media screen and (min-width:768px){
@@ -48,6 +49,7 @@
     top: 8px;
     right: 8px;
     display: flex;
+    
   }
   
   .modal__icon {
