--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -22,7 +22,7 @@
     display: flex;
     flex-wrap: nowrap;
     align-items: baseline;
-    justify-content: space-between;
+    justify-content: center;
   }
 }
 
@@ -36,7 +36,7 @@
     @media screen and (min-width:1200px){
     //      &:not(:last-child){
     // margin-right: 30px;}
-      }
+         }
       }
 
 .benefits__icons{
