--- a/css/main.css
+++ b/css/main.css
@@ -116,7 +116,8 @@ img {
   border: none;
   padding: 0;
   margin: 0;
-  z-index: 4;
+  z-index: 3;
+  color: var(--main-color);
   fill: var(--main-color);
 }
 @media screen and (min-width: 768px) {
@@ -125,16 +126,45 @@ img {
   }
 }
 
-.header__button--mobmenu:hover,
+.menu-toggle--close {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 40px;
+  width: 40px;
+  cursor: pointer;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  top: 10px;
+  right: 14px;
+  z-index: 4;
+  color: var(--main-color);
+}
+@media screen and (min-width: 768px) {
+  .menu-toggle--close {
+    display: none;
+  }
+}
+
+.header-nav__icon--close {
+  fill: var(--main-color);
+}
+
+.menu-toggle:hover,
 .header-nav__icon--open:focus {
   fill: var(--hover-button);
 }
 
-.header-nav__icon--close {
-  display: none;
-}
-
-.header__button--mobmenu.is-open .header-nav__icon--close {
+.menu-toggle--close.is-open .header-nav__icon--close {
   display: inline-block;
   fill: var(--main-color);
 }
@@ -144,7 +174,7 @@ img {
   fill: var(--hover-button);
 }
 
-.header__button--mobmenu.is-open .header-nav__icon--open {
+.menu-toggle--close.is-open .header-nav__icon--open {
   display: none;
 }
 
