--- a/sass/component/_button.scss
+++ b/sass/component/_button.scss
@@ -12,9 +12,9 @@
   border: none;
   padding: 0;
   margin:0;
-  z-index: 4;
+  z-index: 3;
   
-  
+  color:var(--main-color);
   fill: var(--main-color);
 
   @media screen and (min-width:768px){
@@ -22,15 +22,43 @@
     }
 }
 
-.header__button--mobmenu:hover,
+.menu-toggle--close{
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  width: 40px;
+  cursor: pointer;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  top: 10px;
+  right: 14px;
+  z-index: 4;
+  
+  color:var(--main-color);
+  
+
+  @media screen and (min-width:768px){
+    display: none;
+    }
+}
+
+.header-nav__icon--close{
+  fill: var(--main-color);
+}
+
+
+
+.menu-toggle:hover,
 .header-nav__icon--open:focus {
   fill: var(--hover-button);
 }
-.header-nav__icon--close{
-  display: none;
-}
 
-.header__button--mobmenu.is-open .header-nav__icon--close {
+.menu-toggle--close.is-open .header-nav__icon--close {
   display: inline-block;
   fill: var(--main-color);}
 
@@ -40,7 +68,7 @@
 }
 
 
-.header__button--mobmenu.is-open .header-nav__icon--open {
+.menu-toggle--close.is-open .header-nav__icon--open {
   display: none;
 }
 
