--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -7,7 +7,7 @@
 }
   
 .menu__list {
- width: 350px; 
+min-width: 290px; 
   display: flex;
 justify-content: flex-start;
 flex-wrap: wrap;
@@ -45,7 +45,7 @@ margin-bottom: 40px;
  }
   
   .exsamples__item {
-    width: 450px;
+    min-width: 290px;
     text-align: center;
     cursor: pointer;
     margin-bottom: 30px;
