--- a/css/main.css
+++ b/css/main.css
@@ -1691,7 +1691,7 @@ img {
 }
 
 .menu__list {
-  min-width: 290px;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1750,7 +1750,7 @@ img {
 }
 
 .exsamples__item {
-  min-width: 290px;
+  width: 100%;
   text-align: center;
   cursor: pointer;
   margin-bottom: 30px;
@@ -1776,8 +1776,7 @@ img {
 
 .exsamples__img {
   display: block;
-  max-width: 100%;
-  height: 294px;
+  width: 100%;
 }
 
 .exsamples__about {
