--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -7,7 +7,7 @@
 }
   
 .menu__list {
-min-width: 290px; 
+width: 100%; 
   display: flex;
 justify-content: flex-start;
 flex-wrap: wrap;
@@ -45,7 +45,7 @@ margin-bottom: 40px;
  }
   
   .exsamples__item {
-    min-width: 290px;
+    width: 100%;
     text-align: center;
     cursor: pointer;
     margin-bottom: 30px;
@@ -71,8 +71,8 @@ margin-bottom: 40px;
   
   .exsamples__img {
     display: block;
-    max-width: 100%;
-    height: 294px;
+    width: 100%;
+   
   }
   
   .exsamples__about {
